"HAKU" added to about.html

--- a/app/pages/about/about.html
+++ b/app/pages/about/about.html
@@ -15,7 +15,7 @@
     <button class="square_buttons">OHJEET</button>
     <button class="square_buttons">KULUTUS</button>
     <button class="square_buttons">REMONTIT</button>
-    <button class="square_buttons">+</button>
+    <button class="square_buttons">HAKU</button>
     <button class="square_buttons">+</button>
   </div>
 </ion-content>
