initial commit for main-ui-layout

--- a/app/pages/about/about.html
+++ b/app/pages/about/about.html
@@ -7,15 +7,21 @@
 </ion-header>
 
 <ion-content padding class="about">
-  <div class="center_buttons">
-    <button class="square_buttons">INFO</button>
-    <button class="square_buttons">KIINTEISTÖ</button>
-    <button class="square_buttons">YHT. TIEDOT</button>
-    <button class="square_buttons">HUOLTO</button>
-    <button class="square_buttons">OHJEET</button>
-    <button class="square_buttons">KULUTUS</button>
-    <button class="square_buttons">REMONTIT</button>
-    <button class="square_buttons">HAKU</button>
-    <button class="square_buttons">+</button>
-  </div>
+  <container>
+    <ion-col></ion-col>
+      <ion-col>
+        <div class="center_buttons">
+          <button class="square_buttons">INFO</button>
+          <button class="square_buttons">KIINTEISTÖ</button>
+          <button class="square_buttons">YHT. TIEDOT</button>
+          <button class="square_buttons">HUOLTO</button>
+          <button class="square_buttons">OHJEET</button>
+          <button class="square_buttons">KULUTUS</button>
+          <button class="square_buttons">REMONTIT</button>
+          <button class="square_buttons">HAKU</button>
+          <button class="square_buttons"><ion-icon name="add"></ion-icon></button>
+        </div>
+      </ion-col>
+    <ion-col></ion-col>
+  </container>
 </ion-content>
