--- a/app/pages/main/main.html
+++ b/app/pages/main/main.html
@@ -1,25 +1,31 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      About
-    </ion-title>
-  </ion-navbar>
+
 </ion-header>
 
-<ion-content padding class="about">
+
+<ion-content padding class="main">
+
+<ion-searchbar (ionInput)="getItems($event)" placeholder="Etsi Fluxista"></ion-searchbar>
+<ion-list>
+  <ion-item *ngFor="let item of items">
+    {{ item }}
+  </ion-item>
+</ion-list>
+
+
   <container>
     <ion-col></ion-col>
       <ion-col>
         <div class="center_buttons">
           <button class="square_buttons">INFO</button>
           <button class="square_buttons">KIINTEISTÖ</button>
-          <button class="square_buttons">YHT. TIEDOT</button>
+          <button class="square_buttons">YHTEYS-<br>TIEDOT</button>
           <button class="square_buttons">HUOLTO</button>
           <button class="square_buttons">OHJEET</button>
           <button class="square_buttons">KULUTUS</button>
           <button class="square_buttons">REMONTIT</button>
-          <button class="square_buttons">HAKU</button>
-          <button class="square_buttons"><ion-icon name="add"></ion-icon></button>
+          <button class="add_service_buttons" outline><ion-icon name="add"></ion-icon></button>
+          <button class="add_service_buttons" outline><ion-icon name="add"></ion-icon></button>
         </div>
       </ion-col>
     <ion-col></ion-col>
